# bot

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  cities.csv  counties.csv  flake.nix  rustfmt.toml  seagen.sh  subjects.csv
entities/: Cargo.toml
entities/src/: datings.rs  images.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  states.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230526_000001_create_users.rs  m20230610_110326_add_image_type.rs  m20230610_172346_create_states.rs  main.rs
src/: callbacks.rs  cities.rs  datings.rs  db.rs  handle.rs  handle2.rs  main.rs  request.rs  text.rs  types.rs  utils.rs
src/db/: mod.rs
