[package]
name = "olympbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
# once_cell = "1.17.1"
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
