[workspace]
resolver = "2"
members = [".", "entities", "migration"]

[package]
name = "olympdating"
version = "0.1.0"
authors = ["Averyanov Alexander <alex@averyan.ru>"]
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
sea-orm.workspace = true
tokio.workspace = true
anyhow = "1.0.71"
migration = { path = "migration" }
entities = { path = "entities" }
chrono = "0.4.24"
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.8.5"
bitflags = "2.3.1"
strum = { version = "0.24.1", features = ["derive"] }
itertools = "0.10.5"

[workspace.dependencies]
sea-orm = { version = "0.11.3", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
